Fix zooming on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,8 @@ body {
   min-width: 500px;
 }
 
-html, body {
-  width: 100%;
-  max-width: 100%;
-  overflow-x: hidden;
+* {
+  box-sizing: border-box;
 }
 
 code {
